# jenniebrowser

./: .pylintrc  AGENTS.md  LICENSE  README.md  pyproject.toml
packaging/: jenniebrowser.spec
scripts/: build_bundle.py
src/jenniebrowser/: __init__.py  adblocker.py  app.py  browser.py  history.py  settings.py
src/jenniebrowser/resources/: default_filters.txt  startpage.html
tools/: build_pyinstaller.py
